--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
+    "react-table": "^7.8.0",
     "react-virtuoso": "^4.1.0",
     "react-wavify": "^1.7.0",
     "swr": "^2.0.3",
