--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "framer-motion": "^9.0.4",
-    "next": "13.1.6",
+    "mongoose": "^6.9.2",
+    "next": "^13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
