--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "react-icons": "^4.7.1",
     "react-modal": "^3.16.1",
     "react-table": "^7.8.0",
+    "react-tabs": "^6.0.0",
     "react-tooltip": "^5.8.1",
     "react-virtuoso": "^4.1.0",
     "react-wavify": "^1.7.0",
     "swr": "^2.0.3",
+    "use-file-picker": "^1.5.2",
     "yup": "^1.0.0",
     "zustand": "^4.3.3"
   },
