--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "formik": "^2.2.9",
     "framer-motion": "^9.0.4",
     "mongoose": "^6.9.2",
+    "multer": "^1.4.5-lts.1",
     "next": "^13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
