--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "formik": "^2.2.9",
     "framer-motion": "^9.0.4",
     "install": "^0.13.0",
+    "mongoose": "^6.10.0",
     "next": "13.1.6",
     "next-swagger-doc": "^0.3.6",
     "react": "18.2.0",
