--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "bcrypt": "^5.1.0",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
     "eslint": "8.34.0",
