--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "framer-motion": "^9.0.4",
     "install": "^0.13.0",
     "mongoose": "^6.10.0",
+    "mongoose-aggregate-paginate-v2": "^1.0.6",
+    "mongoose-paginate-v2": "^1.7.1",
     "next": "13.1.6",
     "next-swagger-doc": "^0.3.6",
     "react": "18.2.0",
