--- a/package.json
+++ b/package.json
@@ -29,13 +29,14 @@
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
     "react-modal": "^3.16.1",
+    "react-paginate": "^8.1.4",
     "react-table": "^7.8.0",
     "react-tabs": "^6.0.0",
     "react-tooltip": "^5.8.1",
     "react-virtuoso": "^4.1.0",
     "react-wavify": "^1.7.0",
     "swagger-ui-react": "^4.16.0-alpha.1",
-    "swr": "^2.0.3",
+    "swr": "^2.0.4",
     "use-file-picker": "^1.5.2",
     "yup": "^1.0.0",
     "zustand": "^4.3.3"
