--- a/package.json
+++ b/package.json
@@ -25,9 +25,8 @@
     "next": "13.1.6",
     "next-swagger-doc": "^0.3.6",
     "react": "18.2.0",
-    "react-dnd": "^16.0.1",
-    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
+    "react-grid-layout": "^1.3.4",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
     "react-modal": "^3.16.1",
