--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^6.10.0",
     "mongoose-aggregate-paginate-v2": "^1.0.6",
     "mongoose-paginate-v2": "^1.7.1",
+    "nanoid": "^4.0.1",
     "next": "13.1.6",
     "next-swagger-doc": "^0.3.6",
     "react": "18.2.0",
