--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.1.0",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
+    "downshift": "^7.6.0",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "formidable": "^2.1.1",
