--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "formik": "^2.2.9",
     "framer-motion": "^9.0.4",
     "install": "^0.13.0",
+    "mongodb": "^5.1.0",
     "mongoose": "^6.10.0",
     "mongoose-aggregate-paginate-v2": "^1.0.6",
     "mongoose-paginate-v2": "^1.7.1",
@@ -53,5 +54,8 @@
     "prettier": "2.8.4",
     "prettier-plugin-tailwindcss": "^0.2.3",
     "tailwindcss": "^3.2.7"
+  },
+  "browser": {
+    "child_process": false
   }
 }
