--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-icons": "^4.7.1",
     "react-modal": "^3.16.1",
     "react-paginate": "^8.1.4",
+    "react-spinners": "^0.13.8",
     "react-table": "^7.8.0",
     "react-tabs": "^6.0.0",
     "react-tooltip": "^5.8.1",
