--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next": "13.1.6",
     "next-swagger-doc": "^0.3.6",
     "react": "18.2.0",
+    "react-custom-scrollbars-2": "^4.5.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
