--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "formidable": "^2.1.1",
     "formik": "^2.2.9",
     "framer-motion": "^9.0.4",
+    "html2canvas": "^1.4.1",
     "install": "^0.13.0",
+    "jspdf": "^2.5.1",
     "lodash": "^4.17.21",
     "mongodb": "^5.1.0",
     "mongoose": "^6.10.0",
