table printing / saving

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "html2canvas": "^1.4.1",
     "install": "^0.13.0",
     "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.28",
     "lodash": "^4.17.21",
     "mongodb": "^5.1.0",
     "mongoose": "^6.10.0",
@@ -43,6 +44,7 @@
     "react-spinners": "^0.13.8",
     "react-table": "^7.8.0",
     "react-tabs": "^6.0.0",
+    "react-to-print": "^2.14.12",
     "react-tooltip": "^5.8.1",
     "react-virtuoso": "^4.1.0",
     "react-wavify": "^1.7.0",
