--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "swagger-ui-react": "^4.16.0-alpha.1",
     "swr": "^2.0.4",
     "use-file-picker": "^1.5.2",
+    "xlsx": "^0.18.5",
     "yup": "^1.0.0",
     "zustand": "^4.3.3"
   },
