--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mongoose-paginate-v2": "^1.7.1",
     "nanoid": "^4.0.1",
     "next": "13.1.6",
+    "next-pwa": "^5.6.0",
     "next-swagger-doc": "^0.3.6",
     "react": "18.2.0",
     "react-custom-scrollbars-2": "^4.5.0",
