--- a/package.json
+++ b/package.json
@@ -4,9 +4,17 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && electron-builder",
     "start": "next start",
     "lint": "next lint"
+  },
+  "main": "main.js",
+  "build": {
+    "appId": "cmi_scheduling_app",
+    "productName": "CMI Scheduling App",
+    "directories": {
+      "output": "dist"
+    }
   },
   "dependencies": {
     "@next/font": "13.1.6",
@@ -63,7 +71,8 @@
     "postcss": "^8.4.21",
     "prettier": "2.8.4",
     "prettier-plugin-tailwindcss": "^0.2.3",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "electron": "^24.1.2"
   },
   "browser": {
     "child_process": false
