--- a/package.json
+++ b/package.json
@@ -3,10 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production node server.js",
     "lint": "next lint"
+  },
+  "pkg": {
+    "scripts": ".next/**/*.js",
+    "assets": ".next/**/*",
+    "targets": [
+      "node16-linux-x64",
+      "node16-macos-x64",
+      "node16-win-x64"
+    ],
+    "outputPath": "dist"
+  },
+  "bin": {
+    "cmi-scheduler": "./.next/server/webpack-runtime.js"
   },
   "dependencies": {
     "@next/font": "13.1.6",
